feat: sandbox fixes
